examples/test/testpolicy4500.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4500
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key18: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value20
          key1: value49
          key46: value21
      podSelector:
        matchLabels:
          key36: value35
